# procmand

./: .gitignore  Cargo.toml  README.md  process.json  process.yaml  setup.txt
core/: Makefile  process.yaml  procmand
core/src/: main.c
core/src/common/: logger.h
core/src/process/: helper.c  isoproc.c  isoproc.h  parser.c  parser.h  process.c  process.h
oci/: runtime-config-spec.json
old-c/: setup.txt
old-c/core/: Makefile
old-c/core/src/: main.c
old-c/core/src/common/: error_codes.h  logger.c  logger.h
old-c/core/src/process/: helper.c  helper.h  isoproc.c  netns.h  parser.c  process.h
src/: main.rs
src/common/: constants.rs  mod.rs  models.rs
src/oci/: config.rs  runtime.rs
src/process/: isoproc.rs  mod.rs  netns.rs  parser.rs
