[package]
name = "procmand"
version = "0.1.0"
edition = "2024"

[build]
target = "x86_64-unknown-linux-gnu"

[dependencies]
env_logger = "0.11.8"
fork = "0.2.0"
interprocess = "2.2.3"
log = "0.4.27"
nix = { version = "0.30.1", features = ["process", "sched", "signal", "user", "fs", "mount"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"


