[package]
name = "procmand"
version = "0.1.0"
edition = "2024"

[build]
target = "x86_64-unknown-linux-gnu"

[dependencies]
env_logger = "0.11.8"
fork = "0.2.0"
interprocess = "2.2.3"
log = "0.4.27"
netlink-packet-core = "0.7.0"
netlink-packet-route = "0.24.0"
netlink-sys = "0.8.7"
nix = { version = "0.30.1", features = ["process", "sched", "signal", "user", "fs", "mount", "hostname"] }
rtnetlink = "0.17.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = {version = "1.46.1", features = ["full"] }


